Nutch Change Log
   
Nutch Current Development 1.11-SNAPSHOT

* NUTCH-2104 Add documentation to the protocol-selenium plugin Readme file 
  re: selenium grid implementation (Kim Whitehall via mattmann)

* NUTCH-2099 Refactoring the REST endpoints for integration with 
  webui (Sujen Shah via mattmann)

* NUTCH-2098 Add null SeedUrl constructor (Aron Ahmadia via mattmann)

* NUTCH-2093 Indexing filters to use current signatures (markus)

* NUTCH-2092: Unit Test for NutchServer (Sujen Shah via mattmann)

* NUTCH-2096 Explicitly indicate broswer binary to use when selecting 
  selenium remote option in config (Kim Whitehall via mattmann)

* NUTCH-2090 Refactor Seed Resource in REST API (Sujen Shah
  via mattmann)

* NUTCH-2088 Add URL Processing Check to Interactive Selenium 
  Handlers (Michael Joyce via mattmann)

* NUTCH-2077 Upgrade to Tika 1.10 (Michael Joyce via lewismc)

* NUTCH-1517 CloudSearch indexer (jnioche)

* NUTCH-2085 Upgrade Guava (markus)

* NUTCH-2084 SegmentMerger to report missing input dirs (markus)

* NUTCH-2083 Implement functionality to shadow nutch-selenium-grid-plugin from Mo Omer (lewismc)

* NUTCH-2049 Upgrade to Hadoop 2.4 (lewismc)

* NUTCH-1486 Upgrade to Solr 4.10.2 (lewismc, markus)

* NUTCH-2048 parse-tika: fix dependencies in plugin.xml (Michael Joyce via snagel)

* NUTCH-2066 Parameterize Generate REST endpoint (Sujen Shah via mattmann)

* NUTCH-2072 Deflate encoding support is broken when http.content.limit is set to -1 (Tanguy Moal via mattmann)

* NUTCH-2062 Add Plugin for interacting with Selenium WebDriver (Michael Joyce, mattmann)

* NUTCH-1785 Ability to index raw content (markus, lewismc)

* NUTCH-2063 Add -mimeStats flag to FileDumper tool (Mike Joyce via lewismc)

* NUTCH-2021 Use protocol-selenium to Capture Screenshots of the Page as it is Fetched (lewismc)

* NUTCH-2058 Indexer plugin that allows RegEx replacements on the NutchDocument 
  field values (Peter Ciuffetti via mattmann)
