@@ -28,58 +28,139 @@
      <library name="lib-selenium.jar">
         <export name="*"/>
      </library>
-      <library name="cglib-nodep-2.1_3.jar"/>
-      <library name="commons-codec-1.9.jar"/>
-      <library name="commons-collections-3.2.1.jar"/>
-      <library name="commons-exec-1.1.jar"/>
-      <library name="commons-io-2.4.jar"/>
-      <library name="commons-jxpath-1.3.jar"/>
-      <library name="commons-lang3-3.3.2.jar"/>
-      <library name="commons-logging-1.1.3.jar"/>
-      <library name="cssparser-0.9.14.jar"/>
-      <library name="gson-2.3.jar"/>
-      <library name="guava-18.0.jar"/>
-      <library name="htmlunit-2.15.jar"/>
-      <library name="htmlunit-core-js-2.15.jar"/>
-      <library name="httpclient-4.3.4.jar"/>
-      <library name="httpcore-4.3.2.jar"/>
-      <library name="httpmime-4.3.3.jar"/>
-      <library name="ini4j-0.5.2.jar"/>
-      <library name="jetty-http-8.1.15.v20140411.jar"/>
-      <library name="jetty-io-8.1.15.v20140411.jar"/>
-      <library name="jetty-util-8.1.15.v20140411.jar"/>
-      <library name="jetty-websocket-8.1.15.v20140411.jar"/>
-      <library name="jna-3.4.0.jar"/>
-      <library name="nekohtml-1.9.21.jar"/>
-      <library name="netty-3.5.2.Final.jar"/>
-      <library name="operadriver-1.5.jar"/>
-      <library name="operalaunchers-1.1.jar"/>
-      <library name="platform-3.4.0.jar"/>
-      <library name="protobuf-java-2.4.1.jar"/>
-      <library name="sac-1.3.jar"/>
-      <library name="selenium-api-2.44.0.jar"/>
-      <library name="selenium-chrome-driver-2.44.0.jar"/>
-      <library name="selenium-firefox-driver-2.44.0.jar"/>
-      <library name="selenium-htmlunit-driver-2.44.0.jar"/>
-      <library name="selenium-ie-driver-2.44.0.jar"/>
-      <library name="selenium-java-2.44.0.jar"/>
-      <library name="selenium-remote-driver-2.44.0.jar"/>
-      <library name="selenium-safari-driver-2.44.0.jar"/>
-      <library name="selenium-support-2.44.0.jar"/>
-      <library name="serializer-2.7.1.jar"/>
-      <library name="webbit-0.4.14.jar"/>
-      <library name="xalan-2.7.1.jar"/>
-      <library name="xercesImpl-2.11.0.jar"/>
-      <library name="xml-apis-1.4.01.jar"/>
-   </runtime>
-
-   <requires>
-     <library name="selenium-java-2.44.0.jar">
+     <!-- all classes from dependent libraries are exported -->
+     <library name="cglib-nodep-2.1_3.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-codec-1.9.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-collections-3.2.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-exec-1.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-io-2.4.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-jxpath-1.3.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-lang3-3.3.2.jar">
+       <export name="*"/>
+     </library>
+     <library name="commons-logging-1.1.3.jar">
+       <export name="*"/>
+     </library>
+     <library name="cssparser-0.9.14.jar">
+       <export name="*"/>
+     </library>
+     <library name="gson-2.3.jar">
+       <export name="*"/>
+     </library>
+     <library name="guava-18.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="htmlunit-2.15.jar">
+       <export name="*"/>
+     </library>
+     <library name="htmlunit-core-js-2.15.jar">
+       <export name="*"/>
+     </library>
+     <library name="httpclient-4.3.4.jar">
+       <export name="*"/>
+     </library>
+     <library name="httpcore-4.3.2.jar">
+       <export name="*"/>
+     </library>
+     <library name="httpmime-4.3.3.jar">
+       <export name="*"/>
+     </library>
+     <library name="ini4j-0.5.2.jar">
+       <export name="*"/>
+     </library>
+     <library name="jetty-http-8.1.15.v20140411.jar">
+       <export name="*"/>
+     </library>
+     <library name="jetty-io-8.1.15.v20140411.jar">
+       <export name="*"/>
+     </library>
+     <library name="jetty-util-8.1.15.v20140411.jar">
+       <export name="*"/>
+     </library>
+     <library name="jetty-websocket-8.1.15.v20140411.jar">
+       <export name="*"/>
+     </library>
+     <library name="jna-3.4.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="nekohtml-1.9.21.jar">
+       <export name="*"/>
+     </library>
+     <library name="netty-3.5.2.Final.jar">
        <export name="*"/>
      </library>
      <library name="operadriver-1.5.jar">
        <export name="*"/>
-       <exclude name="selenium-remote-driver" />
      </library>
-   </requires>
+     <library name="operalaunchers-1.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="phantomjsdriver-1.2.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="platform-3.4.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="protobuf-java-2.4.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="sac-1.3.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-api-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-chrome-driver-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-firefox-driver-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-htmlunit-driver-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-ie-driver-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-java-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-remote-driver-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-safari-driver-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="selenium-support-2.44.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="serializer-2.7.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="webbit-0.4.14.jar">
+       <export name="*"/>
+     </library>
+     <library name="xalan-2.7.1.jar">
+       <export name="*"/>
+     </library>
+     <library name="xercesImpl-2.11.0.jar">
+       <export name="*"/>
+     </library>
+     <library name="xml-apis-1.4.01.jar">
+       <export name="*"/>
+     </library>
+   </runtime>
+
 </plugin>
