@@ -2,6 +2,8 @@ Nutch Change Log
    
 Nutch Current Development 1.11-SNAPSHOT
 
+* NUTCH-2106 Runtime to contain Selenium and dependencies only once (snagel)
+
 * NUTCH-2104 Add documentation to the protocol-selenium plugin Readme file 
   re: selenium grid implementation (Kim Whitehall via mattmann)
 
